fixed wrong position name passed react-flare-toast@1.1.5

--- a/src/components/Toast.css
+++ b/src/components/Toast.css
@@ -26,7 +26,10 @@
 
 .toast-container {
   position: fixed;
+  top: 10px;
+  right: 10px;
   display: flex;
+  flex-direction: column;
   align-items: flex-end;
 }
 .top {
@@ -48,6 +51,8 @@
   flex-direction: column;
 }
 .bottom {
+  top: unset;
+  right: unset;
   bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
@@ -55,11 +60,15 @@
   align-items: center !important;
 }
 .bottom-right {
+  top: unset;
+  right: unset;
   bottom: 10px;
   right: 10px;
   flex-direction: column-reverse;
 }
 .bottom-left {
+  top: unset;
+  right: unset;
   bottom: 10px;
   left: 10px;
   align-items: flex-start !important;
